--- a/src/sass/partials/_elements.scss
+++ b/src/sass/partials/_elements.scss
@@ -30,7 +30,8 @@
 
 /* Form elements */
 
-input, select {
+input,
+select {
   border: 1px solid $color-dark;
   border-radius: $radius;
   padding: $base-size;
@@ -76,7 +77,6 @@ input, select {
       top: 4px;
       left: 3px;
     }
-
   }
 
   &:hover input ~ .checkbox__checkmark {
@@ -91,7 +91,5 @@ input, select {
     .checkbox__checkmark {
       border-radius: 50%;
     }
-
   }
-
 }
