--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -12,13 +12,12 @@
   &__header {
     @include flex(row, center, space-between);
     margin-bottom: ($base-size * 2);
-    
+
     cursor: pointer;
   }
 
   &__name {
     position: relative;
-    
   }
 
   &__icon {
@@ -89,9 +88,7 @@
       &.active {
         opacity: 1;
       }
-
     }
-
   }
 
   &.active {
@@ -99,16 +96,15 @@
       @include accordion-open();
     }
 
-    .product__order, .product__images {
+    .product__order,
+    .product__images {
       opacity: 1;
     }
 
     .product__icon {
       transform: rotate(180deg);
     }
-
   }
-
 }
 
 .widget-amount {
@@ -119,5 +115,4 @@
     margin: 0 ($base-size / 2);
     padding: 0;
   }
-
 }
