--- a/src/css/style.css
+++ b/src/css/style.css
@@ -908,7 +908,7 @@ select.error {
     text-decoration: none;
     border-radius: 4px;
     margin: 0 3px 0 0;
-    background-image: url("https://i.imgur.com/m9dBR0v.jpg");
+    background-image: url("https://i.postimg.cc/GhMrMZm2/pizza-1.jpg");
     background-size: cover;
     background-position: center center;
     color: #fff;
@@ -936,7 +936,7 @@ select.error {
 
 .home-page-first-section .booking {
     margin: 0 0 0 3px;
-    background-image: url("https://i.imgur.com/a1svbT4.jpg");
+    background-image: url("https://i.postimg.cc/3RCQ2qq3/pizza-2.jpg");
     background-size: cover;
     background-position: center center;
     color: #fff;
