--- a/src/css/style.css
+++ b/src/css/style.css
@@ -936,7 +936,7 @@ select.error {
 
 .home-page-first-section .booking {
     margin: 0 0 0 3px;
-    background-image: url("https://i.postimg.cc/3RCQ2qq3/pizza-2.jpg");
+    background-image: url("https://i.postimg.cc/TPKjnyz3/pizza-2.jpg");
     background-size: cover;
     background-position: center center;
     color: #fff;
