--- a/src/css/style.css
+++ b/src/css/style.css
@@ -892,67 +892,22 @@ select.error {
 }
 
 /* Splash section */
-.home-page-first-section {
-    display: -ms-flexbox;
-    display: flex;
-    padding: 48px 0 48px 0;
-    -ms-flex-flow: wrap;
-    flex-flow: wrap;
-}
+.home-page-first-section { display: -ms-flexbox; display: flex; padding: 48px 0 48px 0; -ms-flex-flow: wrap; flex-flow: wrap; }
 
-.home-page-first-section .link {
-    color: red;
-    -ms-flex: 25%;
-    flex: 25%;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 4px;
-    margin: 0 3px 0 0;
-    background-image: url("https://i.postimg.cc/PrHM05wS/pizza-1.jpg");
-    background-size: cover;
-    background-position: center center;
-    color: #fff;
-}
+.home-page-first-section .link { color: red; -ms-flex: 25%; flex: 25%; text-align: center; text-decoration: none; border-radius: 4px; margin: 0 3px 0 0; background-image: url("https://i.imgur.com/m9dBR0v.jpg"); background-size: cover; background-position: center center; color: #fff; }
 
-.home-page-first-section .link h1 {
-    transition: 0.5s;
-}
+.home-page-first-section .link h1 { transition: 0.5s; }
 
-.home-page-first-section .link:hover h1 {
-    transform: translateY(-12px);
-    transition-timing-function: ease-in-out;
-}
+.home-page-first-section .link:hover h1 { transform: translateY(-12px); transition-timing-function: ease-in-out; }
 
-.home-page-first-section .link p {
-    opacity: 0;
-    transition: 0.5s;
-}
+.home-page-first-section .link p { opacity: 0; transition: 0.5s; }
 
-.home-page-first-section .link:hover p {
-    opacity: 1;
-    transform: translateY(-12px);
-    transition-timing-function: ease-in-out;
-}
+.home-page-first-section .link:hover p { opacity: 1; transform: translateY(-12px); transition-timing-function: ease-in-out; }
 
-.home-page-first-section .booking {
-    margin: 0 0 0 3px;
-    background-image: url("https://i.postimg.cc/TPKjnyz3/pizza-2.jpg");
-    background-size: cover;
-    background-position: center center;
-    color: #fff;
-}
+.home-page-first-section .booking { margin: 0 0 0 3px; background-image: url("https://i.imgur.com/a1svbT4.jpg"); background-size: cover; background-position: center center; color: #fff; }
 
-.home-page-first-section .opening-hours {
-    display: block;
-    color: #fff;
-    text-align: center;
-    border: 1px solid black;
-    margin: 6px 0 0 0;
-    background-color: #ef7676;
-    border-radius: 2%;
-    -ms-flex: 100%;
-    flex: 100%;
-}
+.home-page-first-section .opening-hours { display: block; color: #fff; text-align: center; border: 1px solid black; margin: 6px 0 0 0; background-color: #ef7676; border-radius: 2%; -ms-flex: 100%; flex: 100%; }
+
 
 /*Gallery*/
 .gallery-container {
